--- a/text.html
+++ b/text.html
@@ -4,12 +4,37 @@
 <head>
   <meta charset="utf-8">
   <title>my index page</title>
+  <style>
+body {
+  background: #7D3755;
+  color: #4D92A8;
+  font-family: courier new;
+}
+h1 {
+  text-align:center;
+  color: #BADFED;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+h2 {
+  color: #C6EBF9;
+  text-shadow: 2px 2px 4px #000000;
+}
+mark {
+   background-color: #CF8F8F;
+}
+p {
+  text-shadow: 2px 2px 4px #000000;
+}
+
+
+  </style>
   </head>
 
   <body>
 <h1>I need <i>Groceries</i></h1>
  <h2>But what kind??</h2>
- <p> <mark>I need to write a list</mark> <b>But how?!?!?</b> well lets takes a <ins>lookies</ins> in the class website..</p>
+ <p> <mark>I need to write a list</mark> <b>But how?!?!?</b> well lets takes a <ins>looksies</ins> in the class website..</p>
  <p><em>OKAY! I have <strong>discovered</strong> how to make a proper list!?</em> allow me to test it out...</p>
 
 <h1>Groceries</h1>
@@ -40,22 +65,5 @@
 
 <!--comments-i dont actually need groceries-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </body>
+</body>
     </html>
