--- a/index.html
+++ b/index.html
@@ -4,14 +4,37 @@
 <head>
 <meta charset="utf-8">
 <title>my index page</title>
+
+<style>
+body {
+  background: grey;
+
+}
+a {
+color: lightgreen;
+background: purple;
+text-decoration: none;
+padding: 10px;
+border: 2px solid pink;
+border-radius: 25%;
+
+}
+a:hover {
+ background: lightgreen;
+ color: purple;
+}
+  </style>
 </head>
+
+
 
 <body>
   <h1>Sup it's Natalee</h1>
     <p>this is a collection of my class demos</p>
 
-    <p>test link</p>
-    
+    <p><a href="bords.html">test link</a></p>
+
+
 
 </body>
 </html>
