--- a/index.html
+++ b/index.html
@@ -7,21 +7,29 @@
 
 <style>
 body {
-  background: grey;
+  background: radial-gradient(circle at 82.15% 44.24%, #dbbb39, transparent 58%),radial-gradient(circle at 43.35% 67.92%, #3ebdbd, transparent 85%),radial-gradient(circle at 40.56% 20.72%, #6134ad, transparent 68%),radial-gradient(circle at 92.03% 57.04%, #13ff03, transparent 100%),radial-gradient(circle at 50% 50%, #03a609, #03a609 100%);
+  height: 100vh;
+  color: white;
+  text-align: center;
+  font-family: herculanum;
+
+
 
 }
 a {
-color: lightgreen;
-background: purple;
+color: #dbbb39;
+background: ;
 text-decoration: none;
 padding: 10px;
-border: 2px solid pink;
+border: 2px solid #3ebdbd;
 border-radius: 25%;
+font-family: herculanum;
 
 }
 a:hover {
- background: lightgreen;
- color: purple;
+ background: #dbbb39;
+ color: #3ebdbd;
+ text-shadow: 2px 2px 8px #ffffff;
 }
   </style>
 </head>
@@ -31,8 +39,7 @@ a:hover {
 <body>
   <h1>Sup it's Natalee</h1>
     <p>this is a collection of my class demos</p>
-
-    <p><a href="bords.html">test link</a></p>
+   <p><a href="bords.html">test link</a></p>
 
 
 
