even more fancified
added in glow

--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@ body {
   color: white;
   text-align: center;
   font-family: herculanum;
-
-
-
 }
+
+h1 {
+  text-shadow: 2px 2px 3px #3ebdbd
+}
+
+h2 {
+  text-shadow: 2px 2px 3px #13ff03
+}
+
+h4 {
+  text-shadow: 2px 2px 3px #dbbb39;
+}
+
+p {
+  text-shadow: 2px 2px 3px #6134ad
+}
+
 a {
-color: #dbbb39;
+color: #ffffff;
 background: ;
 text-decoration: none;
 padding: 10px;
@@ -27,9 +41,10 @@ font-family: herculanum;
 
 }
 a:hover {
- background: #dbbb39;
+ background: #ffffff;
  color: #3ebdbd;
- text-shadow: 2px 2px 8px #ffffff;
+ text-shadow: 2px 2px 3px #03a609;
+ 
 }
   </style>
 </head>
@@ -37,9 +52,10 @@ a:hover {
 
 
 <body>
-  <h1>Sup it's Natalee</h1>
-    <p>this is a collection of my class demos</p>
-   <p><a href="bords.html">test link</a></p>
+  <h1>Sup it's Natalee!</h1>
+    <h2>this is a collection of all my class demos</h2>
+    <h4>i hope you enjoy seeing all my fancy creations!!</h4>
+   <p><a href="bords.html"><ins>test link</ins></a></p>
 
 
 
