--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a:hover {
  background: #ffffff;
  color: #3ebdbd;
  text-shadow: 2px 2px 3px #03a609;
- 
+
 }
   </style>
 </head>
@@ -56,6 +56,11 @@ a:hover {
     <h2>this is a collection of all my class demos</h2>
     <h4>i hope you enjoy seeing all my fancy creations!!</h4>
    <p><a href="bords.html"><ins>test link</ins></a></p>
+
+   <ul>
+<li><a href="text.html">text page</a></li>
+<li>another page</li>
+   </ul>
 
 
 
