--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@ h4 {
   text-shadow: 2px 2px 3px #dbbb39;
 }
 
-p {
-  text-shadow: 2px 2px 3px #6134ad
-}
-
 a {
 color: #ffffff;
 background: ;
@@ -38,14 +34,26 @@ padding: 10px;
 border: 2px solid #3ebdbd;
 border-radius: 25%;
 font-family: herculanum;
-
 }
+
 a:hover {
  background: #ffffff;
  color: #3ebdbd;
  text-shadow: 2px 2px 3px #03a609;
 
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 40px;
+    text-shadow: 2px 2px 3px #6134ad
+}
+
   </style>
 </head>
 
@@ -55,11 +63,11 @@ a:hover {
   <h1>Sup it's Natalee!</h1>
     <h2>this is a collection of all my class demos</h2>
     <h4>i hope you enjoy seeing all my fancy creations!!</h4>
-   <p><a href="bords.html"><ins>test link</ins></a></p>
 
    <ul>
+<li><a href="bords.html">test link</a></li>
 <li><a href="text.html">text page</a></li>
-<li>another page</li>
+<li><a href="#">another page</a></li>
    </ul>
 
 
