--- a/text.html
+++ b/text.html
@@ -17,15 +17,23 @@ h1 {
 }
 
 h2 {
+  text-shadow: 2px 2px 4px #4D92A8;
+}
+
+#jon {
   color: #C6EBF9;
   text-shadow: 2px 2px 4px #000000;
 }
 mark {
    background-color: #CF8F8F;
+   color: white;
 }
+
 p {
   text-shadow: 2px 2px 4px #000000;
 }
+
+
 
 
   </style>
@@ -33,8 +41,9 @@ p {
 
   <body>
 <h1>I need <i>Groceries</i></h1>
- <h2>But what kind??</h2>
- <p> <mark>I need to write a list</mark> <b>But how?!?!?</b> well lets takes a <ins>looksies</ins> in the class website..</p>
+ <h2 id="jon">But what kind??</h2>
+ <h2 id="dingle"> <mark>I need to write a list</mark></h2>
+<p><b>But how?!?!?</b> well lets takes a <ins>looksies</ins> in the class website..</p>
  <p><em>OKAY! I have <strong>discovered</strong> how to make a proper list!?</em> allow me to test it out...</p>
 
 <h1>Groceries</h1>
