--- a/text.html
+++ b/text.html
@@ -20,28 +20,41 @@ h2 {
   text-shadow: 2px 2px 4px #4D92A8;
 }
 
-#jon {
+.jon {
   color: #C6EBF9;
   text-shadow: 2px 2px 4px #000000;
 }
-mark {
+
+h2 mark {
    background-color: #CF8F8F;
-   color: white;
+   color: #BADFED;
+}
+
+h3 mark {
+background-color: #4D92A8;
+color: #BADFED;
+text-shadow: 2px 2px 4px #CF8F8F;
 }
 
 p {
   text-shadow: 2px 2px 4px #000000;
 }
 
+.noice {
+font-size: 50px;
+
+}
+
+
 
 
 
   </style>
-  </head>
+</head>
 
   <body>
 <h1>I need <i>Groceries</i></h1>
- <h2 id="jon">But what kind??</h2>
+ <h2 class="jon">But what kind??</h2>
  <h2 id="dingle"> <mark>I need to write a list</mark></h2>
 <p><b>But how?!?!?</b> well lets takes a <ins>looksies</ins> in the class website..</p>
  <p><em>OKAY! I have <strong>discovered</strong> how to make a proper list!?</em> allow me to test it out...</p>
@@ -54,9 +67,9 @@ p {
 <li>cheese</li>
    </ul>
 
-<p>oh thats <sup>nice</sup> but i think i need it to be <sub>numbered</sub> so i know how many items i need.</p>
+<p>oh thats <span class="noice"><sup>nice</sup></span> but i think i need it to be <span class=jon> <sub>numbered</sub></span> so i know how many items i need.</p>
 
-<h3>Groceries.. again</h3>
+<h3><mark>Groceries.. again</mark></h3>
    <ol>
      <li><del>milk</del></li>
      <li>bacon</li>
@@ -64,13 +77,13 @@ p {
   <li>cheese</li>
     </ol>
 
-    <p>OH WOW I LOVE ITTTT LOOK AT IT ALL ORGANIZED AND SUCH, AH HOW AMAZING, I CANNOT BELIEVE MY EYES!</p>
+    <p>OH WOW I LOVE ITTTT LOOK AT IT ALL ORGANIZED AND SUCH, AH HOW AMAZING, I CANNOT BELIEVE MY <span class=noice>EYES!</p></span>
 
 
       <blockquote>
         <small>what is this?? not sure what blockquote does but here it is theres also small on here. i am aware that this has nothing to do with groceries but alas it truly doesn't matter.</small>
       </blockquote>
-      <code>code??? oooo nice and fancyyy</code>
+      <span class=jon><code>code??? oooo nice and fancyyy</code></span>
 
 <!--comments-i dont actually need groceries-->
 
