--- a/bords.html
+++ b/bords.html
@@ -1,12 +1,25 @@
 <!doctype html>
-            
+
 <html lang="en">
 <head>
 <meta charset="utf-8">
 <title>my index page</title>
+
+<style>
+body {
+  background: lightgreen;
+  color: white;
+  text-align: center;
+  text-shadow: 2px 2px 4px black;
+}
+
+
+
+</style>
+
 </head>
-            
+
 <body>
-<p>hello world. birds can fly. and </p>
+<p><ins>hello world. birds can fly. and </ins></p>
 </body>
 </html>
