new stuff made 042822

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 <meta charset="utf-8">
 <title>my index page</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
 
 <style>
 body {
@@ -11,7 +14,7 @@ body {
   height: 100vh;
   color: white;
   text-align: center;
-  font-family: herculanum;
+  font-family: 'Megrim', cursive;
 }
 
 h1 {
@@ -33,7 +36,6 @@ text-decoration: none;
 padding: 10px;
 border: 2px solid #3ebdbd;
 border-radius: 25%;
-font-family: herculanum;
 }
 
 a:hover {
