--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ li {
    <ul>
 <li><a href="bords.html">test link</a></li>
 <li><a href="text.html">text page</a></li>
-<li><a href="#">another page</a></li>
+<li><a href="quote.html">another page</a></li>
    </ul>
 
 
