added extra link

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@ li {
 
    <ul>
 <li><a href="bords.html">test link</a></li>
-<li><a href="text.html">text page</a></li>
-<li><a href="quote.html">another page</a></li>
+<li><a href="text.html">random text page</a></li>
+<li><a href="quote.html">a quote?</a></li>
+<li><a href="suprise.html">a suprise</a></li>
    </ul>
 
 
