--- a/suprise.html
+++ b/suprise.html
@@ -7,20 +7,46 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 <style>
 body {
   text-align: center;
   background:radial-gradient(circle at 49.39% 4%, #ff1212, transparent 71%),radial-gradient(circle at 49.86% 24.8%, #ffa200, transparent 79%),radial-gradient(circle at 49.11% 40.72%, #f7ff00, transparent 78%),radial-gradient(circle at 48.46% 54.72%, #2bff00, transparent 100%),radial-gradient(circle at 48.46% 70.56%, #0033ff, transparent 81%),radial-gradient(circle at 47.99% 83.84%, #7700ff, transparent 89%),radial-gradient(circle at 48.27% 94.8%, #dd00ff, transparent 98%),radial-gradient(circle at 50% 50%, #03a609, #03a609 100%);
-  height: 150vh;
   font-family: 'Oleo Script', cursive;
-  font-size: 75px;
+
+}
+h1 {
+  color: white;
+  text-shadow: 1px 1px 1px black;
+  text-decoration: underline;
+  text-decoration-style: dashed;
+  text-decoration-color: lightgrey;
+}
+h2 {
+  color: white;
+  text-shadow: 1px 1px 1px black;
+  text-decoration: underline;
+  text-decoration-style: double;
+  text-decoration-color: pink;
+}
+h3 {
+  color: white;
+  text-shadow: 1px 1px 1px black;
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: violet;
 }
 
 p {
-  text-shadow: 2px 1px 8px white;
+  text-shadow: 2px 2px 1px white;
   border: 50px dotted;
   border-style: double;
+  padding: 100px;
+  font-size: 75px;
+  font-family: 'Press Start 2P', cursive;
   }
 .r {color: darkviolet;}
 .a {color: indigo;}
@@ -35,6 +61,9 @@ p {
 </head>
 
 <body>
+<h1>we be fancy</h1>
+<h2>we be gay</h2>
+<h3>we be stylin'</h3>
 <p class="r">R</p>
 <p class="a">A</p>
 <p class="i">I</p>
