--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ li {
 
 
 <body>
-  <h1>Sup it's Natalee!</h1>
+  <h1>Sup, it's Natalee!</h1>
     <h2>this is a collection of all my class demos</h2>
-    <h4>i hope you enjoy seeing all my fancy creations!!</h4>
+    <h4>I hope you enjoy seeing all my fancy creations!!</h4>
 
    <ul>
 <li><a href="bords.html">test link</a></li>
