--- a/suprise.html
+++ b/suprise.html
@@ -23,7 +23,7 @@ h1 {
   text-shadow: 1px 1px 1px black;
   text-decoration: underline;
   text-decoration-style: dashed;
-  text-decoration-color: lightgrey;
+  text-decoration-color: white;
 }
 h2 {
   color: white;
