--- a/suprise.html
+++ b/suprise.html
@@ -71,6 +71,9 @@ p {
 <p class="b">B</p>
 <p class="o">O</p>
 <p class="w">W</p>
+<p>beans be cool</p>
+<p>cool be beans</p>
+<p>beans</p>
 
 </body>
 </html>
