--- a/bords.html
+++ b/bords.html
@@ -20,6 +20,8 @@ body {
 </head>
 
 <body>
-<p><ins>hello world. birds can fly. and </ins></p>
+  <img src="butterfly.jpg" alt="website header with butterfly" />
+<p><ins>hello world. birds can fly, and here watch my sad ant animation- </ins></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U3YB5nfkuoM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
