--- a/background.html
+++ b/background.html
@@ -8,7 +8,8 @@
 <style>
 body {
   background-image: url("double-bubble-dark.webp");
-  color: white
+  color: white;
+  background-repeat: repeat;
 }
 
 </style>
