--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ li {
 <li><a href="text.html">random text page</a></li>
 <li><a href="quote.html">a quote?</a></li>
 <li><a href="suprise.html">a suprise</a></li>
+<li><a href="background.html">backgrounds</a></li>
    </ul>
 
 
