--- a/background.html
+++ b/background.html
@@ -10,6 +10,16 @@ body {
   background-image: url("double-bubble-dark.webp");
   color: white;
   background-repeat: repeat;
+  background-attachment:
+  background-size: contain;
+}
+#ugly1 {
+  width:100%;
+  height:300px;
+  background-image: url("cat.jpg");
+  background-size: cover;
+  text-align: center;
+  color: orange;                         
 }
 
 </style>
@@ -17,7 +27,13 @@ body {
 </head>
 
 <body>
+  <div id="ugly1">
+    <h1>beautiful</h1>
+    <p>mew</p>
+  </div>
 <h1>My background page!</h1>
 <p>this is a page to show off some fancy backgrounds</p>
+<p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p><p>this is a page to show off some fancy backgrounds</p>
+
 </body>
 </html>
