--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ li {
 <li><a href="quote.html">a quote?</a></li>
 <li><a href="suprise.html">a suprise</a></li>
 <li><a href="background.html">backgrounds</a></li>
+<li><a href="boxes.html">boxes</a></li>
    </ul>
 
 
