--- a/background.html
+++ b/background.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>backgrounds are fun!</title>
+<title>fancy cat backgroundssssss</title>
 
 <style>
 body {
@@ -19,7 +19,7 @@ body {
   background-image: url("cat.jpg");
   background-size: cover;
   text-align: center;
-  color: orange;                         
+  color: orange;
 }
 
 </style>
