--- a/quote.html
+++ b/quote.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>my index page</title>
+<title>a random quote</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Megrim&family=Rajdhani:wght@300&display=swap" rel="stylesheet">
