--- a/text.html
+++ b/text.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>my index page</title>
+  <title>my grocery list</title>
   <style>
 body {
   background: #7D3755;
