--- a/bords.html
+++ b/bords.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>my index page</title>
+<title>random stuff, also sad ant tragedy!</title>
 
 <style>
 body {
