--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ li {
 <li><a href="suprise.html">a suprise</a></li>
 <li><a href="background.html">backgrounds</a></li>
 <li><a href="boxes.html">boxes</a></li>
+<li><a href="flex.html">flex boxes</a></li>
    </ul>
 
 
