--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ li {
 <li><a href="background.html">backgrounds</a></li>
 <li><a href="boxes.html">boxes</a></li>
 <li><a href="flex.html">flex boxes</a></li>
+<li><a href="grids.html">grids</a></li>
    </ul>
 
 
