--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ li {
 <li><a href="boxes.html">boxes</a></li>
 <li><a href="flex.html">flex boxes</a></li>
 <li><a href="grids.html">grids</a></li>
+<li><a href="transition.html">wiggling rectangles, squares and circles</a></li>
    </ul>
 
 
