--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ li {
 <li><a href="flex.html">flex boxes</a></li>
 <li><a href="grids.html">grids</a></li>
 <li><a href="transition.html">wiggling rectangles, squares and circles</a></li>
+<li><a href="animate.html">EVERYTHINGS MOVING</a></li>
    </ul>
 
 
